--- a/teal/scripts/build
+++ b/teal/scripts/build
@@ -1,3 +1,5 @@
 #!/bin/bash
 cd `dirname $BASH_SOURCE`/../..
 cyan build --prune
+rm -rf ./lua/tests
+cp ./teal/src/text-to-colorscheme/internal/class.lua.txt ./lua/text-to-colorscheme/internal/class.lua
